# DeepLoco

./: .gitignore  .travis.yml  CMakeLists.txt  Main.cpp  README.md
.travis/: install.sh  script.sh
anim/: CMakeLists.txt
caffe_mods/: fixed_euclidean_loss_layer.cpp  weighted_euclidean_loss_layer.cpp
learning/: CMakeLists.txt
optimizer/: CMakeLists.txt  Main.cpp
optimizer/scenarios/: OptScenario.h  OptScenarioPoliEval.cpp  OptScenarioPoliEval.h  OptScenarioSimChar.h  ScenarioProcessMocap.cpp  ScenarioRetargetMotion.cpp  ScenarioSampleAction.cpp  ScenarioSegmentMotion.cpp
render/: CMakeLists.txt  OFFParser.cpp  TextureDesc.cpp  TextureUtil.cpp
scenarios/: CMakeLists.txt  DrawScenarioSimChar.cpp
sim/: CMakeLists.txt  SpAlg.cpp
util/: CMakeLists.txt  FileUtil.cpp
